LayoutTests:

Reviewed by Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=12910
          REGRESSION (r18756-r18765): list-bullet doesn't redraw properly when changing the list's content using JavaScript

        * fast/repaint/list-marker-expected.checksum: Added.
        * fast/repaint/list-marker-expected.png: Added.
        * fast/repaint/list-marker-expected.txt: Added.
        * fast/repaint/list-marker.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12910
          REGRESSION (r18756-r18765): list-bullet doesn't redraw properly when changing the list's content using JavaScript

        Test: fast/repaint/list-marker.html

        * rendering/RenderListItem.cpp:
        (WebCore::RenderListItem::positionListMarker): Add the marker to the visual
        overflow of all its ancestor blocks up to the list item. This needs to be
        done here since the marker is positioned only after those blocks have been
        laid out.



Canonical link: https://commits.webkit.org/16736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19899 268f45cc-cd09-0410-ab3c-d52691b4dbfc